tests/negative/neg_try_send_legacy.safe
-- Test: neg_try_send_legacy
-- Description: The legacy try_send spelling was renamed to send with a success variable.
-- Expected: REJECT source_frontend_error

package neg_try_send_legacy

   subtype item is integer (0 to 10)

   channel data_ch : item capacity 1

   task worker
      value   : item = 0
      success : boolean = false

      loop
         try_send data_ch, value, success
